# gaia-agent-llamaindex

./: agent.py  app.py  pyproject.toml  requirements.txt
.github/workflows/: sync-to-huggingface.yml
